[project]
name = "deep-rl-with-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.2.3",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "pygame>=2.6.1",
    "pyvirtualdisplay>=3.0",
    "tqdm>=4.67.3",
]
